# beauty

./: .clang-format  .gitignore  CMakeLists.txt  README.md  apply-cpp-format.sh  check-cpp-format.sh
data/: 100test.py
docs/: 100_continue_implementation.md
examples/: 100_continue_example.cpp  CMakeLists.txt
examples/esp32/: file_handler.cpp  file_handler.hpp  file_io.cpp  file_io.hpp  my_file_api.cpp  my_file_api.hpp
examples/pc/: file_handler.cpp  file_handler.hpp  file_io.cpp  file_io.hpp  file_storage_handler.cpp  http_result.hpp  main.cpp  my_chat_endpoint.hpp  my_data_streaming_endpoint.hpp  my_file_api.cpp  my_file_api.hpp  my_router_api.cpp  my_router_api.hpp  router_example.cpp
import/: CMakeLists.txt
src/: CMakeLists.txt  base64.cpp  base64.hpp  beauty_common.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  environment.hpp  file_handler.cpp  file_handler.hpp  header.hpp  http_result.hpp  i_file_handler.hpp  i_file_io.hpp  i_route_handler.hpp  library.json  main.cpp  mime_types.cpp  mime_types.hpp  multipart_parser.cpp  multipart_parser.hpp  reply.cpp  reply.hpp  request.hpp  request_decoder.cpp  request_decoder.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  route_handler.cpp  route_handler.hpp  router.cpp  server.cpp  server.hpp  session.hpp  url_parser.hpp  ws_encoder.cpp  ws_handler.cpp  (+7 more)
src/beauty/: base64.hpp  beauty_common.hpp  connection.hpp  connection_manager.hpp  default_random.hpp  fast_random.hpp  header.hpp  http_result.hpp  i_file_io.hpp  i_random_interface.hpp  i_ws_receiver.hpp  i_ws_sender.hpp  mime_types.hpp  multipart_parser.hpp  parse_common.hpp  reply.hpp  request.hpp  request_decoder.hpp  request_handler.hpp  request_parser.hpp  router.hpp  server.hpp  ws_encoder.hpp  ws_endpoint.hpp  ws_message.hpp  ws_parser.hpp  ws_receive.hpp  ws_sec_accept.hpp  ws_types.hpp
test/: CMakeLists.txt  base64_test.cpp  file_handler_test.cpp  file_io_test.cpp  http_result_test.cpp  multipart_parser_test.cpp  random_interface_test.cpp  request_decoder_test.cpp  request_parser_test.cpp  router_test.cpp  server_test.cpp  url_parser_test.cpp  ws_encoder_test.cpp  ws_parser_test.cpp  ws_sec_accept_test.cpp
test/utils/: mock_file_handler.cpp  mock_file_handler.hpp  mock_file_io.cpp  mock_file_io.hpp  mock_not_found_handler.hpp  mock_random.hpp  mock_request_handler.cpp  mock_request_handler.hpp  mock_route_handler.cpp  mock_route_handler.hpp  test_client.hpp
test_scripts/: 100-continue.sh  multipart_upload.py  post_requests.py
www/: index.html  styles.css
